--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,9 +44,7 @@ rails_env=test_with_rspec:
   script:
     # rspec tests fail without phantomjs
     - apt-get install -y phantomjs
-    - ln -s /home/app/webapp/bin/phantomjs /usr/bin/phantomjs
-    - ln -s /home/app/webapp/bin/phantomjs /usr/local/bin/phantomjs
-    - ln -s /home/app/webapp/bin/phantomjs /usr/local/share/phantomjs
+    - phantomjs --version
     - su - app -lc 'cd /home/app/webapp && RAILS_ENV=test bundle install --with test --jobs $(nproc)'
     # see GCAT_info/GCAT_Roadmap.txt for info on these rpsec tests
     - su - app -lc 'cd /home/app/webapp && RAILS_ENV=test bundle exec rspec spec/features/'
