Update .gitlab-ci.yml -- don't use bash line continuation syntax in yaml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,8 @@
 ###
-#  GrowthCurveDB .gitlab-ci.yml
-#  - uses custom docker container 
-#    - https://gitlab.wei.wisc.edu/devops/weiror/tree/growthcurvedb
+#  GCAT .gitlab-ci.yml
+#  - uses our standard WEI docker container
+#  - webapp prereqs are installed during gitlab ci (instead of in a custom base image)
+#  - cached folders (per branch) store webapp prereqs and ruby gems to speed up ci
 ###
 
 image: registry.glbrc.org/ci/weiror:1.3
@@ -65,43 +66,44 @@ before_script:
   - gpg -a --export E084DAB9 | apt-key add -
   - apt-get -o dir::cache::archives="apt" install -y -qq r-base r-base-dev fontconfig wget 
   # R packages 
-- echo 'options(repos = c(CRAN = "https://cran.rstudio.com/"), download.file.method = "libcurl")' >> /etc/R/Rprofile.site && \
-    git clone https://github.com/ybukhman/GCAT.git /tmp/GCAT && \
-    cd /tmp/GCAT/R && \
-    curl -O https://cran.r-project.org/src/contrib/pheatmap_1.0.8.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/gplots_3.0.1.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/gtable_0.2.0.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/Rcpp_0.12.10.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/labeling_0.3.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/colorspace_1.3-2.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/plyr_1.8.4.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/dichromat_2.0-0.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/RColorBrewer_1.1-2.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/munsell_0.4.3.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/scales_0.4.1.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/KernSmooth_2.23-15.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/bitops_1.0-6.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/caTools_1.17.1.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/gtools_3.5.0.tar.gz && \
-    curl -O https://cran.r-project.org/src/contrib/gdata_2.17.0.tar.gz && \
-    R CMD INSTALL gtable_0.2.0.tar.gz && \
-    R CMD INSTALL Rcpp_0.12.10.tar.gz && \
-    R CMD INSTALL labeling_0.3.tar.gz && \
-    R CMD INSTALL colorspace_1.3-2.tar.gz && \
-    R CMD INSTALL plyr_1.8.4.tar.gz && \
-    R CMD INSTALL dichromat_2.0-0.tar.gz && \
-    R CMD INSTALL RColorBrewer_1.1-2.tar.gz && \
-    R CMD INSTALL munsell_0.4.3.tar.gz && \
-    R CMD INSTALL scales_0.4.1.tar.gz && \
-    R CMD INSTALL pheatmap_1.0.8.tar.gz && \
-    R CMD INSTALL KernSmooth_2.23-15.tar.gz && \
-    R CMD INSTALL bitops_1.0-6.tar.gz && \
-    R CMD INSTALL caTools_1.17.1.tar.gz && \
-    R CMD INSTALL gtools_3.5.0.tar.gz && \
-    R CMD INSTALL gdata_2.17.0.tar.gz && \
-    R CMD INSTALL gplots_3.0.1.tar.gz && \
-    R CMD INSTALL GCAT_6.3.1.tar.gz
-
+  - echo 'options(repos = c(CRAN = "https://cran.rstudio.com/"), download.file.method = "libcurl")' >> /etc/R/Rprofile.site 
+  #- git clone https://github.com/ybukhman/GCAT.git /tmp/GCAT 
+  - mkdir -p prereqs/R
+  - cp -a GCAT_info/R/. prereqs/R
+  - cd prereqs/R
+  - curl -O https://cran.r-project.org/src/contrib/pheatmap_1.0.8.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/gplots_3.0.1.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/gtable_0.2.0.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/Rcpp_0.12.10.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/labeling_0.3.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/colorspace_1.3-2.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/plyr_1.8.4.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/dichromat_2.0-0.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/RColorBrewer_1.1-2.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/munsell_0.4.3.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/scales_0.4.1.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/KernSmooth_2.23-15.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/bitops_1.0-6.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/caTools_1.17.1.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/gtools_3.5.0.tar.gz 
+  - curl -O https://cran.r-project.org/src/contrib/gdata_2.17.0.tar.gz 
+  - R CMD INSTALL gtable_0.2.0.tar.gz 
+  - R CMD INSTALL Rcpp_0.12.10.tar.gz 
+  - R CMD INSTALL labeling_0.3.tar.gz 
+  - R CMD INSTALL colorspace_1.3-2.tar.gz 
+  - R CMD INSTALL plyr_1.8.4.tar.gz 
+  - R CMD INSTALL dichromat_2.0-0.tar.gz 
+  - R CMD INSTALL RColorBrewer_1.1-2.tar.gz 
+  - R CMD INSTALL munsell_0.4.3.tar.gz 
+  - R CMD INSTALL scales_0.4.1.tar.gz 
+  - R CMD INSTALL pheatmap_1.0.8.tar.gz 
+  - R CMD INSTALL KernSmooth_2.23-15.tar.gz 
+  - R CMD INSTALL bitops_1.0-6.tar.gz 
+  - R CMD INSTALL caTools_1.17.1.tar.gz 
+  - R CMD INSTALL gtools_3.5.0.tar.gz 
+  - R CMD INSTALL gdata_2.17.0.tar.gz 
+  - R CMD INSTALL gplots_3.0.1.tar.gz 
+  - R CMD INSTALL GCAT_6.3.1.tar.gz
   # phantomjs
   # apt-get installs merged into single command above
   #- apt-get -o dir::cache::archives="apt" install -y -qq fontconfig wget 
